// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`border props 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div class="zv-tabs__wrap">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
      <div class="zv-tabs__line"></div>
    </div>
  </div>
  <div class="zv-tabs__content"></div>
</div>
`;

exports[`change tabs data 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div>
    <div class="zv-sticky">
      <div class="zv-tabs__wrap zv-hairline--top-bottom">
        <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
          <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title2<!----></span></div>
          <div role="tab" class="zv-tab zv-tab--disabled zv-ellipsis"><span class="zv-tab__text">title3<!----></span></div>
          <div class="zv-tabs__line" style="background-color: rgb(238, 10, 36);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`change tabs data 2`] = `
<div class="zv-tabs zv-tabs--card">
  <div class="zv-tabs__wrap">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--card" style="border-color: blue;">
      <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis" style="border-color: blue; background-color: blue;"><span class="zv-tab__text">title1<!----></span></div>
      <div role="tab" class="zv-tab zv-ellipsis" style="border-color: blue; color: blue;"><span class="zv-tab__text">title2<!----></span></div>
      <div role="tab" class="zv-tab zv-tab--disabled zv-ellipsis" style="border-color: blue;"><span class="zv-tab__text">title3<!----></span></div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`click to switch tab 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div class="zv-tabs__wrap zv-hairline--top-bottom">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
      <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
      <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title2<!----></span></div>
      <div role="tab" class="zv-tab zv-tab--disabled zv-ellipsis"><span class="zv-tab__text">title3<!----></span></div>
      <div class="zv-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane" style="">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`click to switch tab 2`] = `
<div class="zv-tabs zv-tabs--line">
  <div class="zv-tabs__wrap zv-hairline--top-bottom">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
      <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
      <div role="tab" class="zv-tab zv-tab--active zv-ellipsis" aria-selected="true"><span class="zv-tab__text">title2<!----></span></div>
      <div role="tab" class="zv-tab zv-tab--disabled zv-ellipsis"><span class="zv-tab__text">title3<!----></span></div>
      <div class="zv-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%); transition-duration: 0.3s;"></div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`dot prop 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div class="zv-tabs__wrap zv-hairline--top-bottom">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
      <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text"><div class="zv-info zv-info--dot"></div></span></div>
      <div class="zv-tabs__line"></div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane">Text</div>
  </div>
</div>
`;

exports[`info prop 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div class="zv-tabs__wrap zv-hairline--top-bottom">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
      <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text"><div class="zv-info">10</div></span></div>
      <div class="zv-tabs__line"></div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane">Text</div>
  </div>
</div>
`;

exports[`lazy render 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div>
    <div class="zv-sticky">
      <div class="zv-tabs__wrap zv-hairline--top-bottom">
        <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
          <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title2<!----></span></div>
          <div role="tab" class="zv-tab zv-tab--disabled zv-ellipsis"><span class="zv-tab__text">title3<!----></span></div>
          <div class="zv-tabs__line" style="background-color: rgb(238, 10, 36);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`lazy render 2`] = `
<div class="zv-tabs zv-tabs--line">
  <div>
    <div class="zv-sticky">
      <div class="zv-tabs__wrap zv-hairline--top-bottom">
        <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
          <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title2<!----></span></div>
          <div role="tab" class="zv-tab zv-tab--disabled zv-ellipsis"><span class="zv-tab__text">title3<!----></span></div>
          <div class="zv-tabs__line" style="background-color: rgb(238, 10, 36); width: 2px; transform: translateX(0px) translateX(-50%);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">Text</div>
  </div>
</div>
`;

exports[`name prop 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div class="zv-tabs__wrap zv-hairline--top-bottom">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
      <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
      <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title2<!----></span></div>
      <div role="tab" class="zv-tab zv-tab--disabled zv-ellipsis"><span class="zv-tab__text">title3<!----></span></div>
      <div class="zv-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane" style="">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`render nav-left & nav-right slot 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div>
    <div class="zv-sticky">
      <div class="zv-tabs__wrap zv-hairline--top-bottom">
        <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line" style="border-color: #ee0a24;">Nav Left<div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
          <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title2<!----></span></div>
          <div role="tab" class="zv-tab zv-tab--disabled zv-ellipsis"><span class="zv-tab__text">title3<!----></span></div>
          <div class="zv-tabs__line" style="background-color: rgb(238, 10, 36);"></div>Nav Right
        </div>
      </div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`rendered event 1`] = `<div role="tabpanel" class="zv-tab__pane" style="">Text</div>`;

exports[`scrollspy 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div>
    <div class="zv-sticky">
      <div class="zv-tabs__wrap zv-hairline--top-bottom">
        <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
          <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
          <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title2<!----></span></div>
          <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title3<!----></span></div>
          <div class="zv-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane">Text</div>
    <div role="tabpanel" class="zv-tab__pane">Text</div>
    <div role="tabpanel" class="zv-tab__pane">Text</div>
  </div>
</div>
`;

exports[`scrollspy 2`] = `
<div class="zv-tabs zv-tabs--line">
  <div>
    <div class="zv-sticky">
      <div class="zv-tabs__wrap zv-hairline--top-bottom">
        <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
          <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
          <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title2<!----></span></div>
          <div role="tab" class="zv-tab zv-tab--active zv-ellipsis" aria-selected="true"><span class="zv-tab__text">title3<!----></span></div>
          <div class="zv-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%); transition-duration: 0.3s;"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane">Text</div>
    <div role="tabpanel" class="zv-tab__pane">Text</div>
    <div role="tabpanel" class="zv-tab__pane">Text</div>
  </div>
</div>
`;

exports[`swipe to switch tab 1`] = `
<div class="zv-tabs zv-tabs--line">
  <div class="zv-tabs__wrap zv-hairline--top-bottom">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
      <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
      <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title2<!----></span></div>
      <div role="tab" class="zv-tab zv-tab--disabled zv-ellipsis"><span class="zv-tab__text">title3<!----></span></div>
      <div class="zv-tabs__line"></div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 2`] = `
<div class="zv-tabs zv-tabs--line">
  <div class="zv-tabs__wrap zv-hairline--top-bottom">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
      <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
      <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title2<!----></span></div>
      <div role="tab" class="zv-tab zv-tab--disabled zv-ellipsis"><span class="zv-tab__text">title3<!----></span></div>
      <div class="zv-tabs__line"></div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 3`] = `
<div class="zv-tabs zv-tabs--line">
  <div class="zv-tabs__wrap zv-hairline--top-bottom">
    <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
      <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">title1<!----></span></div>
      <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">title2<!----></span></div>
      <div role="tab" class="zv-tab zv-tab--disabled zv-ellipsis"><span class="zv-tab__text">title3<!----></span></div>
      <div class="zv-tabs__line"></div>
    </div>
  </div>
  <div class="zv-tabs__content">
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="">Text</div>
    <div role="tabpanel" class="zv-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;
